# CombiFF

./: .gitignore  .pre-commit-config.yaml  AUTHORS.md  CMakeLists.txt  INSTALL.md  README.md  license.txt  setup.py
dev/conda_envs/: combiff.yml
doc/tex/: CombiFF.tex  enu.tex  references.bib  tbl.tex
scr/: check_cnv.py  clean.py  compile.py  compile_documentation.py  compile_manual.py  draw_isomers.py  helper_functions.py  run_enu.py  run_tbl.py
src/: CMakeLists.txt
src/cnv/: CMakeLists.txt  main.cpp
src/cnv/lib/: AdjacencyMatrixCnv.h  AdjacencyMatrixHandler.cpp  AdjacencyMatrixHandler.h  CMakeLists.txt  FamilyIdentifierHandler.cpp  FamilyIdentifierHandler.h  FormulaHandler.cpp  FormulaHandler.h  Handler.cpp  Handler.h  InputOutput.cpp  InputOutput.h  NameHandler.cpp  NameHandler.h  SmilesHandler.cpp  SmilesHandler.h
src/enu/: CMakeLists.txt  main.cpp
src/enu/lib/: AdjacencyMatrixEnu.h  Alias.cpp  Alias.h  CMakeLists.txt  EnumRun.cpp  EnumRun.h  EnumSpecification.cpp  EnumSpecification.h  Enumerator.cpp  Enumerator.h  Family.cpp  Family.h  FamilySpecifications.cpp  FamilySpecifications.h  HydrogenDistribution.cpp  HydrogenDistribution.h  InputFiles.h  InputOutput.cpp  InputOutput.h  MaxFillAlg.cpp  MaxFillAlg.h  Pseudoatom.cpp  Pseudoatom.h  StereoGenerator.cpp  StereoGenerator.h  Substructure.cpp  Substructure.h  matchingEnu.cpp  matchingEnu.h  printInfo.cpp  printInfo.h  readLambdas.cpp  readLambdas.h
src/pybinds/: pyCombiFF.cpp  pycnv.cpp  pycnv.h  pyenu.cpp  pyenu.h  pytbl.cpp  pytbl.h
src/shared/: Atom.cpp  Atom.h  CMakeLists.txt  ContainerOperators.cpp  ContainerOperators.h  ElementTypes.h  LambdaVector.h  Matrix.cpp  Matrix.h  Permutation.cpp  Permutation.h  Range.cpp  Range.h  SmilesGenerator.h  StringVector.h  Time.h  XmlParser.cpp  XmlParser.h  exceptions.cpp  exceptions.h  smilesToMatrix.cpp  smilesToMatrix.h  version.h
src/tbl/: CMakeLists.txt  main.cpp
src/tbl/lib/: AdjMatrixTBL.h  AtomTypes.cpp  AtomTypes.h  CMakeLists.txt  InputFiles.h  InputOutput.cpp  InputOutput.h  Link.cpp  Link.h  Linkage.h  MatrixTbl.h  MoleculeDecomposer.cpp  MoleculeDecomposer.h  TblAtom.cpp  TblAtom.h  TblFragment.cpp  TblFragment.h  TblRun.cpp  TblRun.h  TopologicalProperty.cpp  TopologicalProperty.h  moleculeMacros.cpp  moleculeMacros.h  mtb.cpp  mtb.h  replacement.cpp  replacement.h
use/: global_settings.py
use/input_files/: README  smiles_list
use/input_files/aliases/: README  aliases.dtd  aliases.xml
use/input_files/atomtypes/: README  atomtypes.dtd  atomtypes.xml
use/input_files/family_definitions/: .family_definitions_01xx.xml_stereo  .family_definitions_02xx.xml  .family_definitions_05xx.xml  .family_definitions_06xx.xml  .family_definitions_08xx.xml  .family_definitions_10xx.xml  .family_definitions_13xx.xml  README  family_definitions.dtd  family_definitions_02xx.xml  family_definitions_03xx.xml  family_definitions_04xx.xml  family_definitions_05xx.xml  family_definitions_06xx.xml  family_definitions_07xx.xml  family_definitions_08xx.xml  family_definitions_09xx.xml  family_definitions_10xx.xml  family_definitions_11xx.xml  family_definitions_12xx.xml  family_definitions_13xx.xml  family_definitions_14xx.xml  family_definitions_intro.xml  family_definitions_tests.xml
use/input_files/fragments/: README  fragments.dtd  fragments.xml  united_atom_fragments.xml
use/input_files/macro_replacements/: replacements.dtd  replacements.xml
use/input_files/pseudoatoms/: README  pseudoatoms.dtd  pseudoatoms.xml
use/input_files/substructures/: README  substructures.dtd  substructures.xml
use/output_files/: isomer_enumeration.dtd
use/output_files/family_isomer_enumerations/: family_isomer_enumeration.dtd  family_isomer_enumeration_0100.xml
use/output_files/molecule_decompositions/: molecule_decompositions.dtd  molecule_decompositions_0100.xml
use/output_files/molecules_with_macros/: molecules_with_macros.dtd  molecules_with_macros_0100.xml
use/output_files/mtb/: 0100.mtb
